# lem_in

./: .clang-format  .clangd  .gitignore  Cargo.toml  Makefile  README.md  lem_in.h  lem_in.py  pyproject.toml
src/: main.rs
srcs/: main.c
