[package]
name = "lem_in"
version = "0.1.0"
edition = "2024"

[dependencies]

[lints.clippy]
# warn all lints by default
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# deactivate useless lints
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
default_numeric_fallback = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
missing_docs_in_private_items = "allow"
print_stdout = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
unwrap_used = "allow"
